FIX : Compilation error. Add find package boost to cmake file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required (VERSION 2.8.11)
+cmake_minimum_required (VERSION 3.0.2)
 project (fake-smtp-server)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE Debug)
+
+set(BOOST_MIN_VERSION "1.39.0")
+find_package(Boost ${BOOST_MIN_VERSION} REQUIRED COMPONENTS system filesystem)
 
 set (SOURCE_FILES
    EmailAnalyser.cpp
