ADD : Access to attached files. FIX : Error on regular expression and on reading socket.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set (SOURCE_FILES
    TcpConnection.cpp
    TcpServer.cpp
    main.cpp
+   Base64.cpp
 )
 
 add_executable(fake-smtp-server ${SOURCE_FILES})
